[package]
name = "server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
serde_json = "1.0"
#serde = { version = "1.0.152", features = ["derive"] }
timed = "0.2.1"

thepipelinetool = { path = "../../thepipelinetool/thepipelinetool" }
#runner = { path = "../../thepipelinetool/runner" }
#git = "https://github.com/thepipelinetool/thepipelinetool.git"
#task = { git = "https://github.com/thepipelinetool/thepipelinetool.git" }
#utils = { git = "https://github.com/thepipelinetool/thepipelinetool.git" }
sqlx = { version = "0.7", default-features = false, features = [ "runtime-tokio", "postgres", "json", "chrono" ] }
log = "0.4.20"
env_logger = "0.10.0"
redis = { version = "0.23.3", features = ["json"] }
#redis-macros = "0.1.0"

# server deps
tower-http = { version = "0.4.4", features = [ "cors", "trace", "compression-gzip" ] }
saffron = { git = "https://github.com/cloudflare/saffron.git" }
chrono = { version = "0.4.31", features = [ "serde" ] }

kube = { version = "0.87.1", features = ["runtime", "derive", "ws" ] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
futures = "0.3.17"
anyhow = "1.0.44"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "worker"
path = "bin/worker.rs"

[[bin]]
name = "kube"
path = "bin/kube.rs"